# traceforge

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: analytics_view.md  architecture.md  case_study.md  evaluation_plan.md  failure_modes.md  implementation_plan.md  replay_contract.md  trace_schema.md
docs/source_context/: decision_memo.md  finalist_red_team.md  p060_project_architect_handoff.md  workflow_findings.md
fixtures/incidents/: checkout_timeout_input.json
fixtures/model_outputs/: bad_prompt_classification.json  bad_prompt_route.json  baseline_good_classification.json  baseline_good_route.json  patched_prompt_classification.json  patched_prompt_route.json
fixtures/tool_outputs/: billing_ledger_lookup_healthy.json  service_metrics_lookup_checkout_latency.json
reports/: first_divergence_report.md  incident_timeline.md  regression_gate_report.md
scripts/: demo.sh
src/traceforge/: __init__.py  __main__.py  cli.py  diff.py  fixtures.py  gate.py  hashing.py  models.py  replay.py  reports.py  tracing.py  workflow.py
tests/: __init__.py  test_cli.py  test_diff.py  test_fixtures.py  test_gate.py  test_hashing.py  test_models.py  test_replay.py  test_reports.py  test_scaffold.py  test_tracing.py  test_workflow.py
traces/: baseline_good.jsonl  incident_bad.jsonl  patched_good.jsonl  regression_gate_result.json  replay_baseline_vs_incident.json  replay_baseline_vs_patched.json
