[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceforge"
version = "0.1.0"
description = "File-backed incident replay for LLM/tool pipelines."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Erik Rice" }
]
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[project.scripts]
traceforge = "traceforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
